--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,18 +30,19 @@ commands:
     - run: sudo apt --fix-broken install
     - run: npm ci
 
-setup:
-  executor: node
-  steps:
-    - checkout
-    - run: node my-script.js
-test:
-  executor: node
-  steps:
-    - checkout
-    - restore-cypress
-    - run: npm run test:ci
-    - save-cypress
+jobs:  
+  setup:
+    executor: node
+    steps:
+      - checkout
+      - run: node my-script.js
+  test:
+    executor: node
+    steps:
+      - checkout
+      - restore-cypress
+      - run: npm run test:ci
+      - save-cypress
 
 
 workflows:
