--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
     steps:
       - checkout
       - restore-cypress
+      - install-deps
       - run: npm run test:ci
       - cache-cypress
 
