👌 run apt-get-update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ commands:
   install-deps:
     description: Install dependencies
     steps:
+    - run: sudo apt-get update
     - run: sudo apt-get install -y libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb xdg-utils
     - run: wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - run: sudo dpkg -i --force-depends google-chrome-stable_current_amd64.deb
