👌 Run on 2 machines

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
       - checkout
       - run: node my-script.js
   test:
+    parallelism: 2
     executor: node
     steps:
       - checkout
