--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,8 @@ commands:
 jobs:  
   setup:
     executor: node
+    environment:
+      CYPRESS_RESULT_PATH: cypress/results
     steps:
       - checkout
       - run: node my-script.js
@@ -45,21 +47,32 @@ jobs:
       - install-deps
       - run: npm run test:ci
       - cache-cypress
+      # we delete the results folder on success, because we only care about the failed tests artifacts
+      - run:
+          command: rm -rf CYPRESS_RESULT_PATH
+          when: on_success
       - store_artifacts:
-          path: cypress/results
-          destination: test-results
+          path: CYPRESS_RESULT_PATH
+      
   test-added:
     parallelism: 5
     executor: node
+    environment:
+      CYPRESS_RESULT_PATH: cypress/results
     steps:
       - checkout
       - restore-cypress
       - install-deps
       - run: npm run test:ci:added
       - cache-cypress
+      # we delete the results folder on success, because we only care about the failed tests artifacts
+      - run:
+          command: rm -rf $CYPRESS_RESULT_PATH
+          when: on_success
       - store_artifacts:
-          path: cypress/results
-          destination: test-results
+          path: $CYPRESS_RESULT_PATH
+
+
 
 
 workflows:
@@ -72,3 +85,4 @@ workflows:
       - test-added:
           requires:
             - setup
+
