--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules/*
 cypress/screenshots/**
 cypress/videos**
-cypress/results
 cypress/.DS_STORE
+cypress/reports/**
+cypress/testInsights/**
