--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,9 @@ jobs:
           when: on_success
       - store_artifacts:
           path: cypress/reports
+      - store_test_results:
+          path: cypress/testInsights
+
       
   test-added:
     parallelism: 5
@@ -69,6 +72,8 @@ jobs:
           when: on_success
       - store_artifacts:
           path: cypress/reports
+      - store_test_results:
+          path: cypress/testInsights
 
 
 
