--- a/cypress-reporter-config.json
+++ b/cypress-reporter-config.json
@@ -1,11 +1,11 @@
 {
   "reporterEnabled": "mocha-junit-reporter, cypress-mochawesome-reporter",
   "mochaJunitReporterReporterOptions": {
-    "mochaFile": "cypress/testInsights/junit/results-[hash].xml"
+    "mochaFile": "cypress/testInsights/junit/results.xml"
   },
   "cypressMochawesomeReporterReporterOptions": {
     "reportDir": "cypress/reports",
-    "reportFilename": "cypress-test-report-[hash]",
+    "reportFilename": "cypress-test-report",
     "html": true,
     "json": false,
     "embeddedScreenshots": true,
