--- a/cypress-reporter-config.json
+++ b/cypress-reporter-config.json
@@ -1,7 +1,8 @@
 {
   "reporterEnabled": "mocha-junit-reporter, cypress-mochawesome-reporter",
   "mochaJunitReporterReporterOptions": {
-    "mochaFile": "cypress/testInsights/junit/results.xml"
+    "mochaFile": "cypress/testInsights/[suiteFilename].xml",
+    "outputs": true
   },
   "cypressMochawesomeReporterReporterOptions": {
     "reportDir": "cypress/reports",
