--- a/cypress-reporter-config.json
+++ b/cypress-reporter-config.json
@@ -2,7 +2,8 @@
   "reporterEnabled": "mocha-junit-reporter, cypress-mochawesome-reporter",
   "mochaJunitReporterReporterOptions": {
     "mochaFile": "cypress/testInsights/[suiteFilename].xml",
-    "outputs": true
+    "outputs": true,
+    "circleCIMode": true
   },
   "cypressMochawesomeReporterReporterOptions": {
     "reportDir": "cypress/reports",
