--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "scripts": {
     "test:local:all": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless",
     "test:local:added": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless --env CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"added\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "test:local:flaky": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless --env CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"added\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
+    "test:local:flaky": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless --env CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
+    "test:local:flaky2": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless --env CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky2\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
     "test:ci": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
     "test:ci:added": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true,CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"added\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
     "test:ci:flaky": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true,CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
+    "test:ci:flaky2": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true,CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky2\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
     "trash:assets": "rm -rf cypress/reports && rm -rf cypress/testInsights",
     "postinstall": "patch-package"
   },
