--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "esbuild": "^0.19.4",
     "esbuild-plugin-polyfill-node": "^0.3.0",
     "patch-package": "^8.0.0",
-    "typescript": "^5.2.0"
+    "typescript": "^5.2.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@cypress/grep": "^4.0.1",
