👌 Remove all packages

--- a/package.json
+++ b/package.json
@@ -1,31 +1,8 @@
 {
   "scripts": {
-    "test:local:all": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless",
-    "test:local:added": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless --env CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"added\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "test:local:flaky": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless --env CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "test:local:flaky2": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json SPLIT=1 SPLIT_INDEX=0 cypress run --browser chrome --headless --env CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky2\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "test:ci": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "test:ci:added": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true,CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"added\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "test:ci:flaky": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true,CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "test:ci:flaky2": "OUTPUT_FILE=resulting-timings.json SPLIT_FILE=timings.json cypress run --browser chrome --headless --env split=true,CI=true,grepFilterSpecs=true,grepOmitFiltered=true,grepTags=\"flaky2\" --reporter cypress-multi-reporters --reporter-options configFile=cypress-reporter-config.json",
-    "trash:assets": "rm -rf cypress/reports && rm -rf cypress/testInsights",
-    "postinstall": "patch-package"
+    "hello": "echo 'Hello, world!'"
   },
   "dependencies": {
-    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
-    "cypress": "^12.5.1",
-    "cypress-mochawesome-reporter": "^3.6.1",
-    "esbuild": "^0.19.4",
-    "esbuild-plugin-polyfill-node": "^0.3.0",
-    "patch-package": "^8.0.0",
-    "typescript": "^5.2.0",
-    "xml2js": "^0.6.2"
-  },
-  "devDependencies": {
-    "@cypress/grep": "^4.0.1",
-    "cypress-multi-reporters": "^1.6.4",
-    "cypress-on-fix": "^1.0.2",
-    "cypress-split": "^1.15.6",
-    "mocha-junit-reporter": "^2.2.1"
+    "typescript": "^5.2.0"
   }
 }
